syntax = "proto3";

package protos;

option go_package = "github.com/CaptainIRS/sharded-kvs/internal";

message KVFSMLogEntry {
    int32 operation = 1;
    optional string key = 2;
    optional string value = 3;
    optional bool writes_enabled = 4;
}

message KVFSMSnapshot {
    map<string, string> kv_store = 1;
    bool writes_enabled = 2;
}
